# thingbox

./: .gitignore  README.md
client/: README.md  package-lock.json
client/public/: global.css  index.html
client/src/: Admin.svelte  App.svelte  ItemList.svelte  UserCheck.svelte  api.js  content.js  md.js
server/: README.md  dev.env  example.template  pyproject.toml
server/thingbox/: api.py  cli.py  client.py  db.py
